<resources>
    <string name="app_name">Travlendar+</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="email_error">This is not a valid Email</string>
    <string name="name_error">This is not a valid name</string>
    <string name="empty_error">This field is empty</string>
    <string name="connection_error">Please check your connection and try again.</string>

    <!-- LoginActivity -->
    <string name="button_login">Login</string>
    <string name="register_text">Not a member? <u>Register!</u></string>
    <string name="login_error">Invalid Credentials!</string>
    <string name="login_error_http">Something went wrong, please sign in again.</string>
    <string name="register_success">Thanks for registering! You can now log in.</string>

    <!-- RegisterActivity -->
    <string name="button_register">Submit</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="preferences">Preferences</string>
    <string name="settings">Settings</string>
    <string name="password_match_error">Passwords do not match</string>
    <string name="password_error">Atleast 8 characters are required</string>
    <string name="register_error">The email is already present in the system</string>
    <string name="register_error_http">Something went wrong. Please sign up again.</string>

    <!-- AccountSettingsFragmet -->
    <string name="button_update">Update</string>
    <string name="button_delete">Delete Account</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new password </string>
    <string name="update_error">The email is already present in the system</string>
    <string name="update_error_html">Something went wrong. Please try updating data again.</string>
    <string name="update_error_invalid_password">The current password is not valid</string>
    <string name="current_password_hint">Current password</string>
    <string name="ask_delete">Do you really want to delete your Account?</string>
    <string name="delete_yes">Yes</string>
    <string name="delete_no">No</string>
    <string name="delete_error">It is not possible to delete your account from the system.</string>
    <string name="delete_error_http">Something went wrong. Please try to delete your account again.</string>

    <!-- HomeActivity -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logout">Logout</string>
    <string name="schedule">Schedule</string>

    <!-- PreferencesFragment -->
    <string name="bus">Bus</string>
    <string name="subway">Subway</string>
    <string name="train">Train</string>
    <string name="tram">Tram</string>
    <string name="car">Car</string>
    <string name="walking">Walking</string>
    <string name="bike">Bike</string>
    <string name="taxi">Taxi</string>
    <string name="enjoy">Enjoy</string>
    <string name="mobike">Mobike</string>
    <string name="preferences_error">Something went wrong. Please try to modify the preferences again.</string>
    <string name="preferences_error_invalid">You cannot deactivate all travel options.</string>
    <string name="preferences_error_data">These are not valid preferences.</string>

    <!-- CreateCalendarFragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_calendar">New Calendar</string>
    <string name="name_hint">Name</string>
    <string name="description_hint">Description</string>
    <string name="create_calendar_button">Submit</string>
    <string name="pick_location">Pick Location</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="pick_color">Pick Color</string>
    <string name="create_calendar_error">There is already a calendar with this name</string>
    <string name="create_calendar_error_http">Something went wrong. Please try to create your calendar again.</string>
    <string name="pick_start_time_button">Pick</string>
    <string name="pick_end_time_button">Pick</string>
    <string name="end_time">Unwanted period end time</string>
    <string name="start_time">Unwanted period start time</string>
    <string name="pick_location_error">Pick a location!</string>
    <string name="color_error">You have to pick a color</string>
    <string name="mileage">Maximum mileage usage</string>
    <string name="mileage_button">Pick</string>
    <string name="cancel_pick">Cancel</string>
    <string name="pick_mileage">Pick</string>
    <string name="pick_time_error">Pick a time</string>
    <string name="time_invalid_error">Start time must be before End time</string>
    <string name="active_switch">Active</string>
    <string name="carbon_switch">CarbonFootprint</string>


    <!-- ModifyCalendarFragment -->
    <string name="modify_calendar_error">There is already a calendar with this name</string>
    <string name="modify_calendar_error_http">Something went wrong. Please try to modify your calendar again.</string>
    <string name="modify_calendar_button">Submit</string>
    <string name="delete_calendar_button">Delete</string>
    <string name="delete_calendar_error">It is not possible to delete this calendar</string>
    <string name="delete_calendar_error_http">Something went wrong. Please try to delete your calendar again.</string>

    <!-- ScheduleFragment -->
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="ask_event">Do you want to modify the event or see the instructions?</string>
    <string name="ask_modify_event">Modify Event</string>
    <string name="ask_instruction_event">See Instructions</string>


    <!-- CreateEventFragment -->
    <string name="next_is_base_switch">Return to calendar base after the event</string>
    <string name="flex_switch">Flex</string>
    <string name="create_event_button">Submit</string>
    <string name="pick_flex_duration">Pick Flex Duration</string>
    <string name="pick_until_date_button">Pick until date</string>
    <string name="recurrence_rule_button">Choose Recurrence Rule</string>
    <string name="time_button">Pick Start/End Time</string>
    <string name="event_location">Event Location</string>
    <string name="flex_duration_error">You have to select a flex duration</string>
    <string name="time">Event Time</string>
    <string name="flex_duration_pick_error">Flex duration must be less than event duration</string>
    <string name="until_date_error">Until date must be after the end date of the event</string>
    <string name="pick_recurrence_error">Choose a recurrence rule</string>
    <string name="pick_times_error">Pick start and end time</string>
    <string name="pick_times_order_error">End time must be after start time</string>
    <string name="until_date_pick_error">Pick an until date for the recurrence rule</string>
    <string name="pick_calendar">Select the calendar the event will be added to</string>
    <string name="create_event_error">There\'s an overlapping with this event in your schedule or you\'ve selected a recurrence rule not valid with respect to the event duration</string>
    <string name="ask_calendar_delete">Are you sure you want to delete this calendar and all of its events?</string>
    <string name="create_calendar_before_pick">You have to create a calendar before start adding events</string>
    <string name="date_button">Pick Start/End Date</string>
    <string name="pick_start_time">Pick Start Date and Time</string>
    <string name="pick_end_time">Pick End Date and Time</string>
    <string name="pick_start_time_error">Time must be in the future</string>
    <string name="start_time_text">Start Time:</string>
    <string name="end_time_text">End Time:</string>
    <string name="until_time_text">Until:</string>


    <!-- ModifyEventFragment -->
    <string name="modify_event_error">There\'s an overlapping with this event in your schedule or you\'ve selected a recurrence rule not valid with respect to the event duration</string>
    <string name="modify_event_button">Submit</string>
    <string name="delete_event_button">Delete</string>
    <string name="recurrence_rule">Recurrence Rule:</string>
    <string name="flex_duration">Flex Duration:</string>
    <string name="ask_event_delete">Do you want to delete this event?</string>
    <string name="delete_no_recurrence">No, Just this recurrence</string>
    <string name="return_text">For returning to base</string>
    <string name="instructions_error">It is not possible to retrieve instructions for this event</string>


</resources>
