<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vehicle_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <Button
            android:id="@+id/mileage_button"
            android:layout_width="89dp"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="8dp"
            android:text="@string/mileage_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_end_time"
            app:layout_constraintVertical_bias="0.0" />

        <Switch
            android:id="@+id/calendar_vehicle_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_start_time"
            android:layout_width="89dp"
            android:layout_height="35dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/pick_start_time_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendar_vehicle_switch"
            android:layout_marginRight="80dp" />

        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/start_time"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_start_time"
            app:layout_constraintEnd_toStartOf="@+id/button_start_time"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_end_time"
            android:layout_width="89dp"
            android:layout_height="35dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="8dp"
            android:text="@string/pick_end_time_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_start_time"
            android:layout_marginRight="80dp" />

        <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/end_time"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_end_time"
            app:layout_constraintEnd_toStartOf="@+id/button_end_time"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/mileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/mileage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mileage_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_time" />

    </android.support.constraint.ConstraintLayout>